--- a/InvestmentSearchApplication.Tests/InvestmentSearchApplication.Tests.csproj
+++ b/InvestmentSearchApplication.Tests/InvestmentSearchApplication.Tests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -25,6 +25,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\InvestmentSearchApplication.BusinessLayer\InvestmentSearchApplication.BusinessLayer.csproj" />
+    <ProjectReference Include="..\InvestmentSearchApplication.DataLayer\InvestmentSearchApplication.DataLayer.csproj" />
+    <ProjectReference Include="..\InvestmentSearchApplication.Entities\InvestmentSearchApplication.Entities.csproj" />
+    <ProjectReference Include="..\InvestmentSearchApplication\InvestmentSearchApplication.csproj" />
   </ItemGroup>
 
 </Project>
